--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "portfolioreact": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.5.3",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
